<resources>
    <string name="app_name">Fake Shope Store</string>
    <string name="add_to_cart_icon">add to cart icon</string>
    <string name="product_description">great outerwear jackets for Spring/Autumn/Winter, suitable for many occasions, such as working, hiking, camping, mountain/rock climbing, cycling, traveling or other outdoors. Good gift choice for you or your family member. A warm hearted love to Father, husband or son in this thanksgiving or Christmas Day.</string>
    <string name="favourite_icon">favourite icon</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favourite">Favourite</string>
    <string name="cart">Cart</string>
    <string name="app_bar_text">What item are you\nlooking for?</string>
    <string name="empty_search_result">empty search result</string>
    <string name="empty_list">Your Search List is Empty</string>
    <string name="description">Explore clothes and add them\nto Search to show them here.</string>
    <string name="search_hint">Search</string>
    <string name="filter">filter</string>
    <string name="empty_favourite_result">empty favourite result</string>
    <string name="empty_favourite_list">Your Favourites List is Empty</string>
    <string name="text_favourite_description">Explore food dishes and add them \n to favorite to show them here.</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="reviews">Reviews</string>
    <string name="review_content">I love this product so much, it is seems like the picture, I did not regert to buy another one</string>
    <string name="noor_mohammed">Noor Mohammed</string>
    <string name="check_out">CHECK OUT</string>
    <string name="all">ALL</string>
</resources>