<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/image_favourite_empty"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/empty_favourite_result"
        app:layout_constraintBottom_toTopOf="@+id/text_favourite_empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:contentDescription="@string/empty_favourite_result" />

    <TextView
        android:id="@+id/text_favourite_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/empty_favourite_list"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/text_empty_favourite_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_favourite_empty" />

    <TextView
        android:id="@+id/text_empty_favourite_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:lines="2"
        android:text="@string/text_favourite_description"
        android:gravity="center"
        android:textColor="@color/grey"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_favourite_empty" />

</androidx.constraintlayout.widget.ConstraintLayout>